Peak Investigator Gamma/JSON compiles
This code compiles but due to OpenSwath link errors, it is not know if
it fully builds.

--- a/src/peakinvestigator/CMakeLists.txt
+++ b/src/peakinvestigator/CMakeLists.txt
@@ -62,6 +62,11 @@ if(UNIX AND NOT CYGWIN)
 endif()
 #------------------------------------------------------------------------------
 
+#------------------------------------------------------------------------------
+# Find QJSON
+#------------------------------------------------------------------------------
+find_package(QJSON REQUIRED)
+
 # get information regarding the openswath files
 include(source/TRANSFORMATIONS/RAW2PEAK/PEAKINVESTIGATOR/PeakInvestigator.cmake)
 
