--- a/src/tests/class_tests/peakinvestigator/CMakeLists.txt
+++ b/src/tests/class_tests/peakinvestigator/CMakeLists.txt
@@ -44,6 +44,7 @@ include_directories(SYSTEM ${OpenMS_INCLUDE_DIRECTORIES} ../../../peakinvestigat
 # list of available tests
 set(PI_action_tests
   PeakInvestigator_Parsing_test
+  PeakInvestigator_SaaS_test
 )
 
 # --------------------------------------------------------------------------
