Dialogs are not MOCed and a new test for just the dialogs has been added.  Note that the single test file results in a specific warning and Look-and-feel problem but in all but the first dialog, but this is only due to the nature of the test system.

--- a/src/tests/class_tests/peakinvestigator/CMakeLists.txt
+++ b/src/tests/class_tests/peakinvestigator/CMakeLists.txt
@@ -45,6 +45,7 @@ include_directories(SYSTEM ${OpenMS_INCLUDE_DIRECTORIES} ../../../peakinvestigat
 set(PI_action_tests
   PeakInvestigator_Parsing_test
   PeakInvestigator_SaaS_test
+  PeakInvestigator_Dialogs_test
 )
 
 # --------------------------------------------------------------------------
